--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ html {
 }
 
 #nav-area {
-  background-color: gray;
+  background-color: red;
   margin: 0;
   min-width: 290px;
   width: 300px;
@@ -85,23 +85,23 @@ h1 {
 
 
 #nav-header {
-  position: fixed;
   justify-content: center;
   align-items: center;
   padding-bottom: 10px;
   background-color: white;
   font-family: "Roboto Condensed";
   font-weight: bold;
+  position: sticky;
 }
 
 #nav-logo, #nav-header-text {
-  display: block;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
 }
 
 #nav-header-text {
+  display: block;
   margin-bottom: 0;
 }
 
@@ -109,6 +109,7 @@ h1 {
   padding-top: 10px;
   max-width: 50%;
   height: auto;
+  display: block;
 }
 
 @media (max-width: 400px) {
@@ -126,6 +127,8 @@ h1 {
   }
 
   #nav-header {
+    margin: 0;
+    padding: 0;
     width: 0;
     height: 0;
     overflow: hidden;
