--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ h1 {
     overflow: hidden;
   }
 }
-
+/*
 @media (max-height: 600px) {
 
   #nav-header {
@@ -159,4 +159,5 @@ h1 {
   font-size: 1.5rem;
   height: auto;
 }
+*/
 }
